# rtti

./: .clang-format  .cppcheck-suppressions  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  rtti_benchmark.cc
cmake/: clang-format.cmake  googlebenchmark.cmake  googletest.cmake
include/: hash.hh  rtti.hh
tests/: CMakeLists.txt  hierarchy_test.cc  rtti_test.cc  typeinfo_test.cc
